2007-11-26  Murray Cumming  <murrayc@murrayc.com>

	* libepc/publisher.c: Documentation: Minor grammatical corrections.

2007-11-26  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac: Depend on gnutls 1.4 instead of 1.6, because it 
	works too.

2007-11-24  Mathias Hasselmann  <mathias@openismus.com>

	Rename EpcServiceMonitor::done signal to
	EpcServiceMonitor::scanning-done.

	* libepc/service-monitor.c, libepc/service-monitor.h: Rename signal.

2007-11-23  Mathias Hasselmann  <mathias@openismus.com>

	Change type of length arguments from gsize to gssize for
	epc_contents_new and epc_contents_new_dup, as they support
	zero terminated strings now.

	* libepc/contents.c, libepc/contents.h: Change length argument type.

2007-11-23  Murray Cumming  <murrayc@murrayc.com>

	* libepc/contents.h: EpcContentsReadFunc documentation:
	Specify that the data length is in bytes (not characters).
	* libepc/contents.c: (epc_contents_new), (epc_contents_new_dup):
	Allow -1 for length if the data is null-terminated.
	* libepc/publisher.c: Change a mention to @value to @data.
	* libepc/shell.c, libepc/shell.h: Some improvement to the
	documentation, without changing meanings.

2007-11-23  Mathias Hasselmann  <mathias@openismus.com>

	Implement EpcServiceMonitor by extracting EpcConsumer code.

	* libepc/consumer.c: Use EpcServiceMonitor.
	* libepc/marshal.list: Add VOID:STRING,STRING.
	* libepc/service-monitor.c, libepc/service-monitor.h:
	Implement the EpcServiceMonitor by refactoring EpcConsumer code.
	* libepc/service-type.c, libepc/service-type.h:
	Add epc_service_type_list_supported.
	* examples/service-browser: Demonstrate usage of EpcServiceMonitor.
	* Makefile.am, examples/.gitignore: Add examples/service-browser.
	* docs/reference/libepc/libepc-1.0-sections.txt: Update symbols

2007-11-23  Mathias Hasselmann  <mathias@openismus.com>

	Make tests/test-progress-hooks pass.

	* tests/test-progress-hooks.c: Remove EPC_TEST_MASK_USER from result.
