@@ -9,13 +9,16 @@ G_BEGIN_DECLS
 /*** END file-header ***/
 
 /*** BEGIN file-production ***/
-/* enumerations from "@filename@" */
+#include "@filename@"
 
 /*** END file-production ***/
 
 /*** BEGIN value-header ***/
 #define EPC_TYPE_@ENUMSHORT@ (@enum_name@_get_type())
-GType @enum_name@_get_type (void);
+
+GType                 @enum_name@_get_type  (void) G_GNUC_CONST;
+G@Type@Class*           @enum_name@_get_class (void) G_GNUC_CONST;
+G_CONST_RETURN gchar* @enum_name@_to_string (@EnumName@ value) G_GNUC_PURE;
 /*** END value-header ***/
 
 /*** BEGIN file-tail ***/
